# semantic-linter

./: LICENSE  README.md  pyproject.toml
semantic_linter/: __init__.py  annotator.py  cli.py  linter.py
